changed keyboard background

--- a/components/keyboard/css/Keyboard.module.css
+++ b/components/keyboard/css/Keyboard.module.css
@@ -2,6 +2,8 @@
   display: flex;
   gap: 10px;
   line-height: 2em;
+  padding: 10px 10px;
+  font-size: 20px;
 }
 
 .keys_hover {
@@ -37,4 +39,19 @@
   transform: translate(-50%, -100%);
   color: var(--font-color);
   font-family: var(--font-type-heading);
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
