--- a/styles/Homepage.module.css
+++ b/styles/Homepage.module.css
@@ -1,9 +1,9 @@
 .homepage {
   text-align: center;
   position: absolute;
-  top: 50% !important;
-  left: 50% !important;
-  transform: translate(-50%, -50%) !important;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   color: var(--font-color);
   font-family: var(--font-type-heading);
   line-height: 1.5em;
@@ -20,6 +20,7 @@
 
 @media only screen and (max-width: 450px) {
   .homepage {
-    transform: translate(-50%, -80%) !important;
+    transform: translate(-50%, -80%);
+    top: 40%;
   }
 }
