--- a/components/ContentList/css/ContentList.module.css
+++ b/components/ContentList/css/ContentList.module.css
@@ -45,11 +45,12 @@
   margin: 0 auto;
   color: var(--font-color);
   font-family: var(--font-type-text);
+  font-size: var(--font-size-text);
 }
 
 .selected_short_description {
   color: #ffff00;
-  font-size: 17px;
+  font-size: 20px;
   transition: font-size 0.5s;
 }
 
