--- a/components/keyboard/css/Keyboard.module.css
+++ b/components/keyboard/css/Keyboard.module.css
@@ -1,13 +1,11 @@
 .keys_align {
   display: flex;
-  line-height: 2em;
-  padding: 8px 8px;
+  line-height: 2.5em;
   font-size: 18px;
-  width: 100%; 
+  width: 100%;
 }
 
 .keys_hover {
-  padding: 0px 4px;
   align-items: center;
   width: 100%;
   text-align: center;
@@ -18,19 +16,15 @@
   color: #000;
 }
 
-.keys_margin {
-  margin-left: 15px;
-}
-
 .space_key {
   margin: 20px auto;
-  width: 150px;
-  height: 20px;
+  width: 60%;
+  height: 30px;
   background-color: var(--font-color);
 }
 
 .space_key:hover {
-  background-color: #000;
+  opacity: 0.8;
   border: 2px solid var(--font-color);
 }
 
@@ -39,16 +33,15 @@
   top: 100%;
   left: 50%;
   display: flex;
-  align-items: center;
   flex-direction: column;
-  width: 100%; 
+  width: 100%;
   transform: translate(-50%, -100%);
   color: var(--font-color);
   font-family: var(--font-type-heading);
   background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
-  z-index: 100;
+  z-index: 9;
 }
 
 @keyframes gradient {
