--- a/styles/Homepage.module.css
+++ b/styles/Homepage.module.css
@@ -7,7 +7,7 @@
   color: var(--font-color);
   font-family: var(--font-type-heading);
   line-height: 1.5em;
-  min-height: 220px;
+  height: 220px;
 }
 
 .heading {
@@ -21,7 +21,15 @@
 
 @media only screen and (max-width: 450px) {
   .homepage {
-    transform: translate(-50%, -80%);
+    transform: translate(-50%, -100%);
     top: 40%;
+    height: 150px;
+  }
+  .heading {
+    font-size: 25px;
+  }
+
+  .text {
+    font-size: 13px;
   }
 }
