--- a/styles/Homepage.module.css
+++ b/styles/Homepage.module.css
@@ -8,6 +8,7 @@
   font-family: var(--font-type-heading);
   line-height: 1.5em;
   height: 220px;
+  width: 98%;
 }
 
 .heading {
@@ -21,7 +22,7 @@
 
 @media only screen and (max-width: 450px) {
   .homepage {
-    transform: translate(-50%, -100%);
+    transform: translate(-50%, -120%);
     top: 40%;
     height: 150px;
   }
