--- a/styles/Details.module.css
+++ b/styles/Details.module.css
@@ -6,11 +6,12 @@
 }
 
 .wrapper {
-  width: 70%;
+  width: 60%;
   margin: 0 auto;
-  padding: 2em 0em;
+  padding: 1.5em 0em;
   font-family: var(--font-type-text);
   font-size: var(--font-size-text);
+  transition: width 1s;
 }
 .heading {
   font-family: var(--font-type-heading);
@@ -55,7 +56,7 @@
   max-width: 90%;
   justify-content: center;
   margin: 0 auto;
-  padding: 30px 0px;
+  padding: 12px 0px;
   line-height: 1.5em;
 }
 
@@ -64,7 +65,7 @@
   line-height: 1.5em;
 }
 
-.description_container p {
+.description_container div {
   padding-top: 15px;
 }
 
@@ -77,13 +78,24 @@
   margin-top: 10px;
 }
 
+@media only screen and (max-width: 760px) {
+  .wrapper {
+    width: 85%;
+    font-size: calc(var(--font-size-text) - 4px);
+  }
+}
+
 @media only screen and (max-width: 450px) {
+  .wrapper {
+    width: 90%;
+    font-size: calc(var(--font-size-text) - 4px);
+  }
   .heading {
-    font-size: calc(var(--font-size-heading) - 8px);
+    font-size: calc(var(--font-size-heading) - 3px);
   }
 
   .link_container {
-    font-size: calc(var(--font-size-text) - 8px);
+    font-size: calc(var(--font-size-text) - 6px);
     justify-content: space-around;
     gap: 2em;
   }
