--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -8,7 +8,6 @@
 }
 
 .wrapper {
-  width: 80%;
   margin: 0 auto;
   padding: 1.5em 0em;
   margin-top: 4em;
@@ -47,10 +46,13 @@
   }
 
   .wrapper {
-    width: 80%;
     margin: 0 auto;
     padding: 0em 0em 2em 0em;
     margin-top: 4em;
+  }
+
+  .input_box {
+    height: 50px;
   }
   
 }
