some improvements, and a fix for firefox browser

--- a/components/InputBox/css/InputBox.module.css
+++ b/components/InputBox/css/InputBox.module.css
@@ -1,6 +1,6 @@
 .input {
   padding: 12px 22px;
-  font-family: var(--font-type-text);
+  /* font-family: var(--font-type-text); */
   text-align: center;
   border: none;
   text-transform: uppercase;
